--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	  gtag('config', 'UA-72344028-1');
 	</script>
-	<title>한표 :: 한기대 시간표 웹</title>
+	<title>빠른 한표 :: 한기대 시간표 웹</title>
 
 	<meta http-equiv="Expires" content="-1"/>
 	<meta http-equiv="Pragma" content="no-cache"/>
@@ -70,7 +70,7 @@
 
 		<div id="header">
 			<img src="png/orange.png" width="140" height="auto">
-			<br/><b>데이터 갱신일 : 2021-02-03 15:00</b>
+			<br/><b>데이터 갱신일 : 2021-07-16 14:00</b>
 		</div>
 
 		<div id="gridBox">
